--- a/index.html
+++ b/index.html
@@ -6,31 +6,64 @@
   <title>On 22 November</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+     /* font-family: Arial, sans-serif;*/
       margin: 0;
-      background-color: #fafafa;
-      color: #333;
+      background-color: #000;
+      color: #fff;
       text-align: center;
+      font-family: "Futura", "Futura PT", "Trebuchet MS", Arial, sans-serif;
+      overflow-y: scroll;
+      scroll-behavior: smooth;
+      -webkit-overflow-scrolling: touch; /* enables bounce on iOS */
     }
     header {
-      padding: 2em 1em;
+      padding: 2em 1em 1em 1em;
     }
     h1 {
       font-size: 2em;
+      font-weight: 700;
       margin-bottom: 0.3em;
     }
     h2 {
-      font-weight: normal;
-      color: #777;
+      font-weight: 400;
+      color: #aaa;
       margin-top: 0;
     }
     img {
       width: 90%;
       max-width: 600px;
-      border-radius: 12px;
+      border-radius: 15px;
       margin: 20px auto;
       display: block;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 10px rgba(255,255,255,0.1);
+      transition: transform 0.3s ease;
+    }
+    img:active {
+      transform: scale(0.98);
+    }
+
+    /* Optional: soft bounce effect at bottom using pseudo-element */
+    body::after {
+      content: "";
+      display: block;
+      height: 120px;
+    }
+
+    /* Custom bounce effect for non-iOS browsers (pure CSS trick) */
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% {
+        transform: translateY(0);
+      }
+      40% {
+        transform: translateY(-20px);
+      }
+      60% {
+        transform: translateY(-10px);
+      }
+    }
+
+    .bounce {
+      animation: bounce 0.6s ease;
     }
   </style>
 </head>
@@ -60,6 +93,22 @@
   <img src="2022-A Double Star Cluster in Perseus.jpg" alt="Photo 18" />
   <img src="2023_IC 342-Hidden Galaxy in Camelopardalis.jpg" alt="Photo 19" />
   <img src="2024-The Medusa Nebula MEDUSA_NEBULA_FINAL_BRS_SIGNED.jpg" alt="Photo 20" />
-  
+
+  <script>
+    // Add bounce when scrolling to bottom (for Android & desktop)
+    let isBouncing = false;
+    window.addEventListener('scroll', () => {
+      const scrollPosition = window.scrollY + window.innerHeight;
+      const bottom = document.body.offsetHeight;
+      if (scrollPosition >= bottom - 10 && !isBouncing) {
+        isBouncing = true;
+        document.body.classList.add('bounce');
+        setTimeout(() => {
+          document.body.classList.remove('bounce');
+          isBouncing = false;
+        }, 600);
+      }
+    });
+  </script>  
 </body>
 </html>
