--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       background-color: #000;
       color: #fff;
       text-align: center;
-      font-family: "Futura", "Futura PT", "Trebuchet MS", Arial, sans-serif;
+      font-family: "Futura Book", "Futura", "Futura PT", "Trebuchet MS", Arial, sans-serif;
       overflow-y: scroll;
       scroll-behavior: smooth;
       -webkit-overflow-scrolling: touch; /* enables bounce on iOS */
@@ -20,14 +20,16 @@
       padding: 2em 1em 1em 1em;
     }
     h1 {
+      font-family: "Futura Demi", "Futura Medium", "Futura", "Futura PT", "Trebuchet MS", sans-serif;
       font-size: 2em;
-      font-weight: 700;
+      font-weight: 400;
       margin-bottom: 0.3em;
     }
     h2 {
       font-weight: 400;
       color: #aaa;
       margin-top: 0;
+    font-family: "Futura Book", "Futura", "Futura PT", "Trebuchet MS", sans-serif;
     }
     img {
       width: 90%;
@@ -35,7 +37,7 @@
       border-radius: 15px;
       margin: 20px auto;
       display: block;
-      box-shadow: 0 4px 10px rgba(255,255,255,0.1);
+      /*box-shadow: 0 4px 10px rgba(255,255,255,0.1);*/
       transition: transform 0.3s ease;
     }
     img:active {
